# tomu-blink-rs

./: .gitignore  Cargo.toml  memory.x  readme.md  runner.py  runner.sh  rust-toolchain.toml
demos/blink/: Cargo.toml
demos/blink/src/: main.rs
demos/captouch/: Cargo.toml
demos/captouch/src/: main.rs
demos/ledpulse/: Cargo.toml
demos/ledpulse/src/: main.rs
demos/usb-hid/: Cargo.toml
demos/usb-hid/src/: main.rs
support/efm32hg309_hal/: Cargo.toml  LICENSE
support/efm32hg309_hal/src/: clocks.rs  gpio.rs  lib.rs  rtc.rs  systick.rs  time_util.rs  timer.rs  watchdog.rs
support/efm32hg309_pac/: Cargo.toml  device.x
support/efm32hg309_pac/src/: acmp0.rs  adc0.rs  aes.rs  cmu.rs  devinfo.rs  dma.rs  emu.rs  generic.rs  gpio.rs  i2c0.rs  idac0.rs  leuart0.rs  lib.rs  msc.rs  mtb.rs  pcnt0.rs  prs.rs  rmu.rs  rtc.rs  timer0.rs  timer1.rs  usart1.rs  usb.rs  vcmp.rs  wdog.rs
support/efm32hg309_pac/src/acmp0/: ctrl.rs  ien.rs  ifc.rs  ifs.rs  inputsel.rs  route.rs  status.rs
support/efm32hg309_pac/src/adc0/: biasprog.rs  cal.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  scanctrl.rs  scandata.rs  scandatap.rs  singlectrl.rs  singledata.rs  singledatap.rs  status.rs
support/efm32hg309_pac/src/aes/: cmd.rs  ctrl.rs  data.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  keyla.rs  keylb.rs  keylc.rs  keyld.rs  status.rs  xordata.rs
support/efm32hg309_pac/src/cmu/: auxhfrcoctrl.rs  calcnt.rs  calctrl.rs  cmd.rs  ctrl.rs  hfcoreclkdiv.rs  hfcoreclken0.rs  hfperclkdiv.rs  hfperclken0.rs  hfrcoctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lfaclken0.rs  lfapresc0.rs  lfbclken0.rs  lfbpresc0.rs  lfcclken0.rs  lfclksel.rs  lfrcoctrl.rs  oscencmd.rs  pcntctrl.rs  route.rs  status.rs  syncbusy.rs  usbcrctrl.rs  ushfrcoconf.rs  ushfrcoctrl.rs  ushfrcotune.rs
support/efm32hg309_pac/src/devinfo/: adc0cal0.rs  adc0cal1.rs  adc0cal2.rs  auxhfrcocal0.rs  auxhfrcocal1.rs  cal.rs  hfrcocal0.rs  hfrcocal1.rs  idac0cal0.rs  msize.rs  part.rs  uniqueh.rs  uniquel.rs  ushfrcocal0.rs
support/efm32hg309_pac/src/dma/: altctrlbase.rs  ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs  ch4_ctrl.rs  ch5_ctrl.rs  chaltc.rs  chalts.rs  chenc.rs  chens.rs  chpric.rs  chpris.rs  chreqmaskc.rs  chreqmasks.rs  chreqstatus.rs  chsreqstatus.rs  chswreq.rs  chuseburstc.rs  chusebursts.rs  chwaitstatus.rs  config.rs  ctrlbase.rs  errorc.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  status.rs
support/efm32hg309_pac/src/emu/: auxctrl.rs  ctrl.rs  lock.rs
support/efm32hg309_pac/src/gpio/: cmd.rs  ctrl.rs  em4wucause.rs  em4wuen.rs  em4wupol.rs  extifall.rs  extipselh.rs  extipsell.rs  extirise.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  insense.rs  pa_ctrl.rs  pa_din.rs  pa_dout.rs  pa_doutclr.rs  pa_doutset.rs  pa_douttgl.rs  pa_modeh.rs  pa_model.rs  pa_pinlockn.rs  pb_ctrl.rs  pb_din.rs  pb_dout.rs  pb_doutclr.rs  pb_doutset.rs  pb_douttgl.rs  pb_modeh.rs  pb_model.rs  pb_pinlockn.rs  pc_ctrl.rs  pc_din.rs  pc_dout.rs  pc_doutclr.rs  pc_doutset.rs  pc_douttgl.rs  pc_modeh.rs  pc_model.rs  (+29 more)
support/efm32hg309_pac/src/i2c0/: clkdiv.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  route.rs  rxdata.rs  rxdatap.rs  saddr.rs  saddrmask.rs  state.rs  status.rs
support/efm32hg309_pac/src/idac0/: cal.rs  ctrl.rs  curprog.rs  dutyconfig.rs
support/efm32hg309_pac/src/leuart0/: clkdiv.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  input.rs  pulsectrl.rs  route.rs  rxdatax.rs  rxdataxp.rs  sigframe.rs  startframe.rs  status.rs  syncbusy.rs  txdata.rs  txdatax.rs
support/efm32hg309_pac/src/msc/: addrb.rs  cachehits.rs  cachemisses.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  irqlatency.rs  lock.rs  masslock.rs  readctrl.rs  status.rs  timebase.rs  wdata.rs  writecmd.rs  writectrl.rs
support/efm32hg309_pac/src/mtb/: base.rs  flow.rs  master.rs  position.rs
support/efm32hg309_pac/src/pcnt0/: auxcnt.rs  cmd.rs  cnt.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  input.rs  route.rs  status.rs  syncbusy.rs  top.rs  topb.rs
support/efm32hg309_pac/src/prs/: ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs  ch4_ctrl.rs  ch5_ctrl.rs  route.rs  swlevel.rs  swpulse.rs  tracectrl.rs
support/efm32hg309_pac/src/rmu/: cmd.rs  ctrl.rs  rstcause.rs
support/efm32hg309_pac/src/rtc/: cnt.rs  comp0.rs  comp1.rs  ctrl.rs  freeze.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  syncbusy.rs
support/efm32hg309_pac/src/timer0/: cc0_ccv.rs  cc0_ccvb.rs  cc0_ccvp.rs  cc0_ctrl.rs  cc1_ccvb.rs  cc1_ccvp.rs  cc1_ctrl.rs  cc2_ccv.rs  cc2_ccvb.rs  cc2_ccvp.rs  cc2_ctrl.rs  ctrl.rs  dtctrl.rs  dtfault.rs  dtfaultc.rs  dtogen.rs  if_.rs  ifc.rs  route.rs  top.rs  topb.rs
support/efm32hg309_pac/src/timer1/: cc0_ccv.rs  cc0_ccvb.rs  cc1_ccvb.rs  cc1_ctrl.rs  cc2_ctrl.rs  cnt.rs  dtfault.rs  dtfc.rs  dtlock.rs  dtogen.rs  dttime.rs  ien.rs  ifs.rs  route.rs
support/efm32hg309_pac/src/timer2/: cc0_ccvp.rs  cc0_ctrl.rs  cc1_ccv.rs  cc2_ccvp.rs  cmd.rs  cnt.rs  ctrl.rs  dtctrl.rs  dtfaultc.rs  dttime.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  status.rs  topb.rs
support/efm32hg309_pac/src/usart0/: clkdiv.rs  cmd.rs  frame.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  irctrl.rs  route.rs  rxdatax.rs  rxdataxp.rs  rxdouble.rs  rxdoublex.rs  rxdoublexp.rs  status.rs  txdata.rs  txdouble.rs  txdoublex.rs
support/efm32hg309_pac/src/usart1/: cmd.rs  ctrl.rs  i2sctrl.rs  ien.rs  ifc.rs  ifs.rs  input.rs  route.rs  rxdata.rs  rxdataxp.rs  rxdouble.rs  rxdoublex.rs  rxdoublexp.rs  status.rs  trigctrl.rs  txdata.rs  txdatax.rs
support/efm32hg309_pac/src/usb/: ctrl.rs  daint.rs  daintmsk.rs  dcfg.rs  dctl.rs  diep0_ctl.rs  diep0_dmaaddr.rs  diep0_int.rs  diep0_tsiz.rs  diep0_txfsts.rs  diep0ctl.rs  diep0dmaaddr.rs  diep0int.rs  diep0tsiz.rs  diep0txfsts.rs  diep1_ctl.rs  diep1_dmaaddr.rs  diep1_int.rs  diep1_tsiz.rs  diep1_txfsts.rs  diep2_ctl.rs  diep2_int.rs  (+43 more)
support/efm32hg309_pac/svd/: EFM32HG309F64.svd  EFM32HG309F64.svd.patched  EFM32HG309F64.yaml
support/efm32hg309_usb/: Cargo.toml
support/efm32hg309_usb/src/: audio.rs  bus.rs  cdc_acm.rs  hid_keyboard.rs  lib.rs  midi.rs  msc.rs  video.rs
support/tomu/: Cargo.toml
support/tomu/src/: led.rs  lib.rs  toboot.rs
(+13 files in other folders)
