[workspace]
resolver = "2"

members = [
    "demos/blink",
    "demos/captouch",
    "demos/ledpulse",
    "demos/usb-cdc",
    "demos/usb-hid",
    "demos/usb-midi",
    "support/efm32hg309_pac",
    "support/efm32hg309_hal",
    "support/efm32hg309_usb",
    "support/tomu",
]

[workspace.dependencies]
bare-metal = "1.0.0"
vcell = "0.1.0"
portable-atomic = { version = "1.13", default-features = false, features = ["critical-section"]}

embedded-hal = { version = "1.0" }
panic-halt = "1.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = "1.2"
defmt = "1.0"
defmt-rtt = "1.1"

efm32hg309-pac = { path = "support/efm32hg309_pac" }
efm32hg309-hal = { path = "support/efm32hg309_hal" }
efm32hg309-usb = { path = "support/efm32hg309_usb" }
tomu = { path = "support/tomu" }
