[package]
authors = ["kromych <kromych@users.noreply.github.con"]
categories = ["embedded", "no-std", "efm32"]
description = "Tomu LED pulse (breathing effect)"
name = "ledpulse"
keywords = ["arm", "cortex-m"]
license = "MIT"
version = "0.0.1"
edition = "2021"

[dependencies]
panic-halt.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
critical-section.workspace = true

efm32hg309-pac.workspace = true
tomu.workspace = true
