[package]
name = "efm32hg309-hal"
authors = ["kromych <kromych@users.noreply.github.con"]
keywords = ["no-std", "arm", "cortex-m", "efm32hg309", "hal"]
description = "EFM32HG309 HAL"
license = "MIT"
version = "0.0.1"
edition = "2021"

[dependencies]
efm32hg309-pac.workspace = true

embedded-hal.workspace = true
panic-halt.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
